# RailwayAI

./: .gitignore  API_REFERENCE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  EUROPEAN_DATA.md  FDC_API_REFERENCE.md  GTFS_CACHE.md  GUIDA_UTILIZZO_AI.md  JSON_API_REFERENCE.md  LIBRARY_USAGE.md  OPPOSITE_TRAIN_SCHEDULER.md  PORTAINER_DEPLOYMENT.md  PORTAINER_UPDATE_NOW.md  QUICK_START.md  RAILWAY_AI_INTEGRATION_SPECS.md  README.md  RELEASE_NOTES_v2.0.0.md  ROUTE_PLANNING_GUIDE.md  STATUS.md  STRATEGY.md  TRAINING_RESULTS.md  actual_problem_scenario.json  analyze_conflict.py  auto_train_complex.sh  deploy_to_portainer.sh  diagnose_scenario.py  docker-compose.yml  login_fail.json  login_success.json  railway_ai.db  requirements.txt  setup.sh  test_all.sh  test_capacity_planning.py  test_scenario.json  test_scenario_conflict.json  test_scheduled_optimization.py  token_response.json  verify_ai_debug.py
.github/: copilot-instructions.md
api/: endpoint_scheduled_optimization.py  fdc_integration_api.py  opposite_train_api.py  server.py  test_client.py  test_fdc_integration_client.py  test_opposite_train_client.py
api/static/: index.html  monitoring.html
api/static/css/: style.css
api/static/js/: dashboard.js
cpp/include/: ml_inference.h  railway_api.h  railway_common.h  railway_scheduler.h
cpp/src/: bindings.cpp  ml_inference.cpp  railway_api.cpp  railway_scheduler.cpp
data/gtfs_cache/: cache_metadata.json
examples/: demo_quick.py  demo_single_track_station.py  example_usage.py  experiments.py  fdc_integration_demo.py  json_api_python_demo.py  minimal_train.py  quick_train.py  test_critical_crossing.py  test_real_opposite_trains.py  test_real_world_model.py
examples/external_app/: CMakeLists.txt  README.md  json_api_demo  json_api_demo.cpp  simple_client  simple_client.cpp
python/data/: create_realistic_dataset.py  create_supervised_dataset.py  data_generator.py
python/data_acquisition/: __init__.py  download_real_data.py  european_data_parser.py  european_railways.py  gtfs_cache_manager.py  gtfs_parser.py  railway_graph.py  rfi_client.py
python/integration/: auth.py  database.py  fdc_integration.py  user_service.py
python/marl_scheduling/: constraints.py  env.py  models.py  scenario_loader.py  train_mappo.py  train_multi.py
python/models/: scheduler_network.py
python/scheduling/: conflict_resolver.py  fast_schedule_optimizer.py  network_analyzer.py  opposite_train_optimizer.py  route_planner.py  schedule_optimizer.py  temporal_simulator.py
python/training/: benchmark.py  evaluate_model.py  export_model.py  export_onnx.py  train_european.py  train_model.py  train_supervised.py
scenarios/: lombardy_real.json  toscana_cleaned.json  toscana_fdc_schema.json  tuscany_real.json
scripts/: fdc_to_railway.py  fetch_osm_rail.py  fix_rail_data.py  init_db.py  manage_user.py  package_release.sh  register_user.py  reset_admin.py  test_system_integration.py
swift/RailwayApp/Models/: AppConfig.swift  AuthenticationManager.swift  RailwayGraphManager.swift  ScheduleProposer.swift
tests/: test_data_generation.py  verify_auth.py  verify_conflict_resolver.py
